feat(v2): implement Phase 6 administration and usability